implement cookie messages

--- a/Magento_Theme/layout/default_head_blocks.xml
+++ b/Magento_Theme/layout/default_head_blocks.xml
@@ -13,9 +13,9 @@
         <!--<css src_type="url" defer="defer"
             src="https://fonts.googleapis.com/css2?family=Open+Sans&amp;family=Roboto:wght@400;500&amp;display=swap"
         />-->
-<!--        <script src="js/alpine-2.3.5.min.js" defer="defer" />-->
-        <script src_type="url" src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.3.5/dist/alpine.min.js"
-                async="async" defer="defer" />
+        <script src="js/alpine-2.3.5.min.js" defer="defer" />
+<!--        <script src_type="url" src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.3.5/dist/alpine.min.js"-->
+<!--                async="async" defer="defer" />-->
     </head>
     <body>
     </body>
