--- a/Magento_Contact/templates/form.phtml
+++ b/Magento_Contact/templates/form.phtml
@@ -6,13 +6,13 @@
 
 /** @var \Magento\Contact\Block\ContactForm $block */
 ?>
-<div class="container px-5 py-6 mx-auto">
-    <form class="form contact"
+<div class="container px-5 py-6 mx-auto flex flex-wrap">
+    <form class="form contact lg:w-1/2 md:w-2/3 "
           action="<?= $block->escapeUrl($block->getFormAction()) ?>"
           id="contact-form"
           method="post"
           >
-        <fieldset class="lg:w-1/2 md:w-2/3 mx-auto">
+        <fieldset class="">
             <div class="flex flex-col text-center w-full mb-12">
                 <legend class="legend sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900"><span><?= $block->escapeHtml(__('Write Us')) ?></span></legend>
                 <p class="w-full mx-auto leading-relaxed text-base"><?= $block->escapeHtml(__('Jot us a note and we’ll get back to you as quickly as possible.')) ?></p>
@@ -71,4 +71,7 @@
             </div>
         </div>
     </form>
+    <div class="lg:w-1/2 md:w-1/3">
+        <h2 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900"><span><?= $block->escapeHtml(__('Contact Details')) ?></span></h2>
+        <p>Contact info</p></div>
 </div>
