--- a/Magento_Theme/layout/default.xml
+++ b/Magento_Theme/layout/default.xml
@@ -10,6 +10,9 @@
         <referenceContainer name="after.body.start">
             <block class="Magento\Framework\View\Element\FormKey" name="formkey" />
         </referenceContainer>
+        <referenceContainer name="page.messages">
+            <block name="messages" template="Magento_Theme::messages.phtml"/>
+        </referenceContainer>
         <referenceContainer name="header.container">
             <block name="header-content" template="Magento_Theme::html/header.phtml">
                 <block class="Magento\Theme\Block\Html\Header\Logo" name="logo">
@@ -37,7 +40,10 @@
             </block>
         </referenceContainer>
         <referenceContainer name="before.body.end">
-<!--            <block name="script-alpine-js" template="Magento_Theme::html/footer/script-alpine-js.phtml"/>-->
+<!--
+            <block name="script-alpine-js" template="Magento_Theme::html/footer/script-alpine-js.phtml"/>
+-->
+            <block name="script-cookies" template="Magento_Theme::html/footer/script-cookies.phtml"/>
             <block name="script-lory-slider" template="Magento_Theme::html/footer/script-lory-slider.phtml"/>
         </referenceContainer>
     </body>
