--- a/Magento_Theme/templates/elements/slider.phtml
+++ b/Magento_Theme/templates/elements/slider.phtml
@@ -64,9 +64,12 @@ $graphqlQuery = $query ?: "
 }";
 ?>
 <script>
-    var initSliderComponent<?= $uniqueId ?> = () => {
+    function initSliderComponent<?= $uniqueId ?>() {
         return {
             products: [],
+            get minHeight () {
+                return this.products && '443px';
+            },
             query: `<?= $graphqlQuery ?>`,
             getProducts($nextTick, $dispatch) {
 
@@ -92,6 +95,7 @@ $graphqlQuery = $query ?: "
 <section class="text-gray-700 body-font my-12"
     x-data="initSliderComponent<?= $uniqueId?>()"
     x-init="getProducts($nextTick, $dispatch); $nextTick(function() { window.loadLorySliders($dispatch); });"
+    :style="`min-height: ${minHeight}`"
 >
     <template x-if="products && products.length">
         <div class="js_slider relative container">
@@ -132,7 +136,7 @@ $graphqlQuery = $query ?: "
                                         </svg>
                                         Add to cart
                                     </a>
-                                    <a class="w-auto ml-auto btn btn-secondary h-12">
+                                    <a class="w-auto ml-auto btn btn-secondary">
                                         <svg class="h-6 w-6 fill-current text-gray-500 hover:text-black" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                             <path d="M12,4.595c-1.104-1.006-2.512-1.558-3.996-1.558c-1.578,0-3.072,0.623-4.213,1.758c-2.353,2.363-2.352,6.059,0.002,8.412 l7.332,7.332c0.17,0.299,0.498,0.492,0.875,0.492c0.322,0,0.609-0.163,0.792-0.409l7.415-7.415 c2.354-2.354,2.354-6.049-0.002-8.416c-1.137-1.131-2.631-1.754-4.209-1.754C14.513,3.037,13.104,3.589,12,4.595z M18.791,6.205 c1.563,1.571,1.564,4.025,0.002,5.588L12,18.586l-6.793-6.793C3.645,10.23,3.646,7.776,5.205,6.209 c0.76-0.756,1.754-1.172,2.799-1.172s2.035,0.416,2.789,1.17l0.5,0.5c0.391,0.391,1.023,0.391,1.414,0l0.5-0.5 C14.719,4.698,17.281,4.702,18.791,6.205z"></path>
                                         </svg>
@@ -144,13 +148,15 @@ $graphqlQuery = $query ?: "
                 </div>
             </div>
             <template x-if="products.length">
-            <span class="js_prev prev bg-white bg-opacity-75 hover:bg-opacity-100 disabled"
-                x-show="products.length">
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 501.5 501.5"><g><path fill="#2E435A" d="M302.67 90.877l55.77 55.508L254.575 250.75 358.44 355.116l-55.77 55.506L143.56 250.75z"></path></g></svg>
-            </span>
-            <span class="js_next next bg-white bg-opacity-75 hover:bg-opacity-100"
+            <span class="js_prev prev bg-white bg-opacity-75 hover:bg-opacity-100 disabled absolute left-0 cursor-pointer"
+                style="top: 50%; margin-top: -25px;"
                   x-show="products.length">
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 501.5 501.5"><g><path fill="#2E435A" d="M199.33 410.622l-55.77-55.508L247.425 250.75 143.56 146.384l55.77-55.507L358.44 250.75z"></path></g></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="50" viewBox="0 0 501.5 501.5"><g><path fill="#2E435A" d="M302.67 90.877l55.77 55.508L254.575 250.75 358.44 355.116l-55.77 55.506L143.56 250.75z"></path></g></svg>
+            </span>
+            <span class="js_next next bg-white bg-opacity-75 hover:bg-opacity-100 absolute right-0 cursor-pointer"
+                  style="top: 50%; margin-top: -25px;"
+                  x-show="products.length">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="50" viewBox="0 0 501.5 501.5"><g><path fill="#2E435A" d="M199.33 410.622l-55.77-55.508L247.425 250.75 143.56 146.384l55.77-55.507L358.44 250.75z"></path></g></svg>
             </span>
             </template>
         </div>
