--- a/Magento_Catalog/templates/product/list.phtml
+++ b/Magento_Catalog/templates/product/list.phtml
@@ -22,7 +22,7 @@ $_helper = $this->helper(Magento\Catalog\Helper\Output::class);
 <?php if (!$_productCollection->count()) :?>
     <div class="message info empty"><div><?= $block->escapeHtml(__('We can\'t find products matching the selection.')) ?></div></div>
 <?php else :?>
-<section class="bg-white py-8">
+<section class="py-8">
     <?= $block->getToolbarHtml() ?>
     <?= $block->getAdditionalHtml() ?>
     <?php
@@ -47,6 +47,7 @@ $_helper = $this->helper(Magento\Catalog\Helper\Output::class);
             <?php /** @var $_product \Magento\Catalog\Model\Product */ ?>
             <?php foreach ($_productCollection as $_product) :?>
             <div class="item product product-item w-full md:w-1/2 xl:w-1/3 p-6 flex flex-col">
+                <div class="rounded-lg shadow bg-white">
                     <?php
                     $productImage = $block->getImage($_product, $imageDisplayArea);
                     ?>
@@ -141,6 +142,7 @@ $_helper = $this->helper(Magento\Catalog\Helper\Output::class);
 
                     </div>-->
                 </div>
+            </div>
             <?php endforeach; ?>
         </div>
     </div>
