--- a/Magento_Contact/layout/contact_index_index.xml
+++ b/Magento_Contact/layout/contact_index_index.xml
@@ -12,6 +12,9 @@
     <body>
         <referenceContainer name="content">
             <block class="Magento\Contact\Block\ContactForm" name="contactForm" template="Magento_Contact::form.phtml">
+                <arguments>
+                    <argument name="form_key_view_model" xsi:type="object">Wigman\Tailwind\ViewModel\FormKey</argument>
+                </arguments>
                 <container name="form.additional.info" label="Form Additional Info"/>
             </block>
         </referenceContainer>
