--- a/Magento_Contact/templates/form.phtml
+++ b/Magento_Contact/templates/form.phtml
@@ -4,24 +4,29 @@
  * See COPYING.txt for license details.
  */
 
-/** @var \Magento\Contact\Block\ContactForm $block */
+use Magento\Contact\Block\ContactForm;
+use Wigman\Tailwind\ViewModel\FormKey;
+
+/** @var ContactForm $block */
+/** @var FormKey $formKeyViewModel */
+$formKeyViewModel = $block->getFormKeyViewModel();
 ?>
 <div class="container px-5 py-6 mx-auto flex flex-wrap">
-    <form class="form contact lg:w-1/2 md:w-2/3 "
+    <form class="form contact lg:w-1/2 md:w-2/3 bg-white rounded p-4 shadow"
           action="<?= $block->escapeUrl($block->getFormAction()) ?>"
           id="contact-form"
           method="post"
           >
         <fieldset class="">
             <div class="flex flex-col text-center w-full mb-12">
-                <legend class="legend sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900"><span><?= $block->escapeHtml(__('Write Us')) ?></span></legend>
+                <h2 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900"><span><?= $block->escapeHtml(__('Write Us')) ?></span></h2>
                 <p class="w-full mx-auto leading-relaxed text-base"><?= $block->escapeHtml(__('Jot us a note and we’ll get back to you as quickly as possible.')) ?></p>
             </div>
             <div class="flex flex-wrap -m-2">
                 <div class="field name required p-2 w-1/2">
                     <label class="label" for="name"><span><?= $block->escapeHtml(__('Name')) ?></span></label>
                     <div class="control">
-                        <input name="name" id="name" title="<?= $block->escapeHtmlAttr(__('Name')) ?>"
+                        <input name="name" id="name" required title="<?= $block->escapeHtmlAttr(__('Name')) ?>"
                                value="<?= $block->escapeHtmlAttr($this->helper(\Magento\Contact\Helper\Data::class)->getPostValue('name') ?: $this->helper(\Magento\Contact\Helper\Data::class)->getUserName()) ?>"
                                class="input input-light w-full"
                                type="text"
@@ -32,7 +37,7 @@
                 <div class="field email required p-2 w-1/2">
                     <label class="label" for="email"><span><?= $block->escapeHtml(__('Email')) ?></span></label>
                     <div class="control">
-                        <input name="email" id="email" title="<?= $block->escapeHtmlAttr(__('Email')) ?>" value="<?= $block->escapeHtmlAttr($this->helper(\Magento\Contact\Helper\Data::class)->getPostValue('email') ?: $this->helper(\Magento\Contact\Helper\Data::class)->getUserEmail()) ?>"
+                        <input name="email" id="email" required title="<?= $block->escapeHtmlAttr(__('Email')) ?>" value="<?= $block->escapeHtmlAttr($this->helper(\Magento\Contact\Helper\Data::class)->getPostValue('email') ?: $this->helper(\Magento\Contact\Helper\Data::class)->getUserEmail()) ?>"
                                class="input input-light w-full"
                                placeholder="<?= $block->escapeHtmlAttr(__('Email')) ?>"
                                type="email"/>
@@ -52,7 +57,7 @@
                 <div class="field comment required p-2 w-full">
                     <label class="label" for="comment"><span><?= $block->escapeHtml(__('What’s on your mind?')) ?></span></label>
                     <div class="control">
-                        <textarea name="comment" id="comment"
+                        <textarea name="comment" id="comment" required
                                   title="<?= $block->escapeHtmlAttr(__('What’s on your mind?')) ?>"
                                   class="input input-light w-full h-48" cols="5" rows="3"><?=
                             $block->escapeHtml($this->helper(\Magento\Contact\Helper\Data::class)->getPostValue('comment'))
@@ -64,7 +69,7 @@
         </fieldset>
         <div class="p-2 w-full">
             <div class="primary">
-                <input type="hidden" name="hideit" id="hideit" value="" />
+                <input type="hidden" name="form_key" value="<?= $formKeyViewModel->getFormKey() ?>" />
                 <button type="submit" title="<?= $block->escapeHtmlAttr(__('Submit')) ?>" class="btn btn-primary">
                     <span><?= $block->escapeHtml(__('Submit')) ?></span>
                 </button>
