--- a/Magento_Theme/templates/html/footer.phtml
+++ b/Magento_Theme/templates/html/footer.phtml
@@ -1,10 +1,10 @@
-<footer class="text-gray-700 body-font bg-background-lighter pb-16">
+<footer class="text-gray-700 body-font bg-white border shadow pb-16">
     <div class="container px-5 py-8 mx-auto">
         <div class="flex flex-wrap md:text-left text-center order-first">
             <?= $block->getChildHtml() ?>
         </div>
     </div>
-    <div class="bg-background">
+    <div class="bg-gray-200 border">
         <div class="container px-5 py-6 mx-auto flex items-center sm:flex-row flex-col">
             <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
                 <span class="ml-3 text-xl">Tailwind Theme</span>
