--- a/Magento_Theme/templates/html/footer/script-cookies.phtml
+++ b/Magento_Theme/templates/html/footer/script-cookies.phtml
@@ -15,10 +15,15 @@
     function deleteCookie(name) { setCookie(name, '', -1); }
 
     window.onload = function () {
-        var messages = getCookie('mage-messages');
-        messages = messages ? JSON.parse(decodeURIComponent(messages).replace(/\+/g, ' ')) : [];
+        try {
+            var messages = getCookie('mage-messages');
+            messages = messages ? JSON.parse(decodeURIComponent(messages).replace(/\+/g, ' ')) : [];
 
-        window.mageMessages = messages;
+            window.mageMessages = messages;
+        } catch (error) {
+            console.warn('Error parsing Cookie Messages:', error);
+            return;
+        }
 
         var messagesEvent = new CustomEvent("messages-loaded", {
             detail: {
