--- a/Magento_Theme/templates/html/header.phtml
+++ b/Magento_Theme/templates/html/header.phtml
@@ -4,7 +4,7 @@ declare(strict_types=1);
 /** @var \Magento\Framework\View\Element\Template $block */
 ?>
 <nav id="header"
-     class="w-full z-30 py-1 bg-background"
+     class="w-full z-30 py-1 bg-white shadow border"
      x-data="{ menuOpen: false, searchOpen: false }"
      @keydown.window.escape="searchOpen = false; menuOpen = false"
 >
