--- a/Magento_Theme/templates/messages.phtml
+++ b/Magento_Theme/templates/messages.phtml
@@ -24,12 +24,12 @@
                      :ui-id="'message-' + message.type"
                 >
                     <div x-html="message.text"></div>
-                    <label class="close cursor-pointer" title="close" for="footertoast"
-                        @click="removeMessage(index)">
+                    <a href="#" class="close cursor-pointer" title="close"
+                        @click.prevent="removeMessage(index)">
                         <svg class="fill-current text-white" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
                             <path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"></path>
                         </svg>
-                    </label>
+                    </a>
                 </div>
             </template>
         </div>
