--- a/Magento_Catalog/templates/product/view/product-info.phtml
+++ b/Magento_Catalog/templates/product/view/product-info.phtml
@@ -15,7 +15,7 @@ $attributesViewModel = $block->getAttributesViewModel();
 $product = $productViewModel->getProduct();
 
 ?>
-<div class="lg:w-1/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0 order-2">
+<div class="lg:w-1/2 w-full lg:pl-10 lg:py-6 mb-6 lg:mb-0 order-2">
     <?php if ($productBrand = $product->getBrand()) { ?>
     <h2 class="text-sm title-font text-gray-500 tracking-widest">
         <?= $productBrand ?></h2>
