--- a/Magento_Theme/templates/elements/slider.phtml
+++ b/Magento_Theme/templates/elements/slider.phtml
@@ -98,7 +98,7 @@ $graphqlQuery = $query ?: "
     :style="`min-height: ${minHeight}`"
 >
     <template x-if="products && products.length">
-        <div class="js_slider relative container">
+        <div class="js_slider relative container px-5">
             <div class="js_frame w-full relative overflow-x-hidden">
                 <div class="js_slides w-full relative flex flex-no-wrap" style="transition-timing-function: ease; transition-duration: 300ms; transform: translateX(0px);">
                     <template x-for="product in products">
