--- a/Magento_Theme/templates/html/footer.phtml
+++ b/Magento_Theme/templates/html/footer.phtml
@@ -1,4 +1,4 @@
-<footer class="text-gray-700 body-font bg-white border shadow pb-16">
+<footer class="text-gray-700 body-font bg-gray-100 border shadow pb-16">
     <div class="container px-5 py-8 mx-auto">
         <div class="flex flex-wrap md:text-left text-center order-first">
             <?= $block->getChildHtml() ?>
