--- a/Magento_Catalog/templates/product/product-detail-page.phtml
+++ b/Magento_Catalog/templates/product/product-detail-page.phtml
@@ -1,6 +1,6 @@
 <section class="text-gray-700 body-font">
     <div class="container mx-auto flex px-2 py-6 md:flex-row flex-col items-center">
-        <div class="flex flex-wrap md:text-left text-center order-first">
+        <div class="flex flex-wrap md:text-left text-center order-first w-full">
             <?= $block->getChildHtml('product.info') ?>
             <?= $block->getChildHtml('product.media') ?>
         </div>
