--- a/Magento_Catalog/layout/catalog_category_view.xml
+++ b/Magento_Catalog/layout/catalog_category_view.xml
@@ -6,11 +6,17 @@
  */
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="2columns-left" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+    <update handle="catalog_list_item" />
     <body>
         <referenceContainer name="columns.top">
             <container name="category.view.container" htmlTag="div"
                        htmlClass="category-view container mx-auto flex px-5 py-12 flex-col items-center" after="-">
-                <block class="Magento\Catalog\Block\Category\View" name="category.image" template="Magento_Catalog::category/image.phtml"/>
+                <block class="Magento\Catalog\Block\Category\View" name="category.image" template="Magento_Catalog::category/image.phtml">
+                    <arguments>
+                        <argument name="image" xsi:type="object">Magento\Catalog\ViewModel\Category\Image</argument>
+                        <argument name="output" xsi:type="object">Magento\Catalog\ViewModel\Category\Output</argument>
+                    </arguments>
+                </block>
                 <block class="Magento\Catalog\Block\Category\View" name="category.description" template="Magento_Catalog::category/description.phtml"/>
                 <block class="Magento\Catalog\Block\Category\View" name="category.cms" template="Magento_Catalog::category/cms.phtml"/>
             </container>
@@ -19,15 +25,6 @@
 
             <block class="Magento\Catalog\Block\Category\View" name="category.products" template="Magento_Catalog::category/products.phtml">
                 <block class="Magento\Catalog\Block\Product\ListProduct" name="category.products.list" as="product_list" template="Magento_Catalog::product/list.phtml">
-                    <container name="category.product.list.additional" as="additional" />
-                    <block class="Magento\Framework\View\Element\RendererList" name="category.product.type.details.renderers" as="details.renderers">
-                        <block class="Magento\Framework\View\Element\Template" name="category.product.type.details.renderers.default" as="default"/>
-                    </block>
-                    <block class="Magento\Catalog\Block\Product\ProductList\Item\Container" name="category.product.addto" as="addto">
-                        <block class="Magento\Catalog\Block\Product\ProductList\Item\AddTo\Compare"
-                               name="category.product.addto.compare" as="compare"
-                               template="Magento_Catalog::product/list/addto/compare.phtml"/>
-                    </block>
 <!--                    <block class="Magento\Catalog\Block\Product\ProductList\Toolbar" name="product_list_toolbar" template="Magento_Catalog::product/list/toolbar.phtml">-->
 <!--                        <block class="Magento\Theme\Block\Html\Pager" name="product_list_toolbar_pager"/>-->
 <!--                    </block>-->
