--- a/Magento_Theme/templates/messages.phtml
+++ b/Magento_Theme/templates/messages.phtml
@@ -1,38 +1,65 @@
 <?php
+/**
+ * Copyright © Wigman Interactive. All rights reserved.
+ * This product is licensed per Magento production install
+ */
+
+declare(strict_types=1);
 ?>
 <script>
-    // JSON.parse(decodeURIComponent("%5B%7B%22type%22%3A%22error%22%2C%22text%22%3A%22Invalid+Form+Key.+Please+refresh+the+page.%22%7D%5D").replace(/\+/g, ' '))
     function initMessages() {
+        "use strict";
         return {
             messages: window.mageMessages || [],
+            isEmpty: function () {
+                return this.messages.reduce( function (isEmpty, message) { return isEmpty && message === undefined}, true)
+            },
             removeMessage: function (messageIndex) {
-                return this.messages.splice(messageIndex,1);
+                this.messages[messageIndex] = undefined;
+            },
+            addMessages: function (messages, hideAfter) {
+                var $this = this;
+                messages.map(function(message) {
+                    $this.messages = $this.messages.concat(message);
+
+                    if (hideAfter) {
+                        $this.setHideTimeOut($this.messages.length -1, hideAfter);
+                    }
+                });
+            },
+            setHideTimeOut: function (messageIndex, hideAfter) {
+                var $this = this;
+                setTimeout(function(messageIndex) { $this.removeMessage(messageIndex) }, hideAfter);
             }
         }
     }
 </script>
 <section id="messages"
          x-data="initMessages()"
-         @messages-loaded.window="messages = event.detail.messages"
+         @messages-loaded.window="addMessages(event.detail.messages, event.detail.hideAfter)"
 >
-    <template x-if="messages && messages.length">
-    <div class="w-full fixed bottom-0" style="z-index:100;">
-        <div role="alert" class="messages container mx-auto py-3">
-            <template x-for="(message, index) in messages" :key="index">
-
-                <div :class="message.type + ' message flex items-center justify-between w-full p-2 bg-gray-600 shadow rounded text-white'"
-                     :ui-id="'message-' + message.type"
-                >
-                    <div x-html="message.text"></div>
-                    <a href="#" class="close cursor-pointer" title="close"
-                        @click.prevent="removeMessage(index)">
-                        <svg class="fill-current text-white" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
-                            <path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"></path>
-                        </svg>
-                    </a>
-                </div>
-            </template>
+    <template x-if="!isEmpty()">
+        <div class="w-full">
+            <div role="alert" class="messages container mx-auto py-3">
+                <template x-for="(message, index) in messages" :key="index">
+                    <div>
+                        <template x-if="message">
+                            <div :class="message.type
+                        + ' message flex items-center justify-between w-full p-2 bg-gray-600 shadow rounded text-white mb-2'"
+                                 :ui-id="'message-' + message.type"
+                            >
+                                <span x-html="message.text"></span>
+                                <a href="#" class="close cursor-pointer" title="close"
+                                   @click.prevent="removeMessage(index)">
+                                    <svg class="fill-current text-white" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
+                                        <path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"></path>
+                                    </svg>
+                                </a>
+                            </div>
+                        </template>
+                    </div>
+                </template>
+            </div>
         </div>
-    </div>
     </template>
 </section>
