--- a/Magento_Theme/templates/messages.phtml
+++ b/Magento_Theme/templates/messages.phtml
@@ -31,7 +31,7 @@ declare(strict_types=1);
                 });
             },
             getMessages: function (data) {
-                if (data.messages && data.messages.lenght) {
+                if (data.messages && data.messages.length) {
                     this.addMessages(data.messages);
                 }
             },
