--- a/Magento_Catalog/templates/product/list/toolbar/viewmode.phtml
+++ b/Magento_Catalog/templates/product/list/toolbar/viewmode.phtml
@@ -12,7 +12,7 @@ use Magento\Catalog\Block\Product\ProductList\Toolbar;
 /**  @var $block Toolbar */
 ?>
 <?php if ($block->isEnabledViewSwitcher()) :?>
-    <div class="modes flex space-x-1 mr-2 items-center px-2 py-2 rounded-md border border-gray-300 bg-white text-sm leading-5 w-20 order-1 col-span-2   ">
+    <div class="modes flex space-x-1 mr-2 items-center px-2 py-2 rounded-md border border-gray-300 bg-white text-sm leading-5 w-20 order-1 col-span-1 sm:col-span-2 md:col-span-1 lg:col-span-2">
         <?php $_modes = $block->getModes(); ?>
         <?php if ($_modes && count($_modes) > 1) :?>
             <strong class="modes-label sr-only" id="modes-label"><?= $block->escapeHtml(__('View as')) ?></strong>
