--- a/Magento_LayeredNavigation/templates/layer/state.phtml
+++ b/Magento_LayeredNavigation/templates/layer/state.phtml
@@ -15,7 +15,7 @@ use Magento\LayeredNavigation\Block\Navigation\State;
 ?>
 <?php $_filters = $block->getActiveFilters() ?>
 <?php if (!empty($_filters)): ?>
-<div class="filter-current bg-primary-lighter border border-container p-4 md:px-8" x-data="{ open: true }">
+<div class="filter-current bg-container-lighter border border-container p-4 md:px-8" x-data="{ open: true }">
     <div class="filter-options-title flex justify-between items-center cursor-pointer"
          @click="open = !open">
         <strong><?= $block->escapeHtml(__('Active filtering')) ?></strong>
