--- a/Magento_Review/layout/catalog_product_view.xml
+++ b/Magento_Review/layout/catalog_product_view.xml
@@ -12,6 +12,7 @@
             <block class="Magento\Review\Block\Product\View\ListView" name="review_list"
                    template="Magento_Review::product/view/list.phtml"
                    ifconfig="catalog/review/active">
+                <block class="Magento\Theme\Block\Html\Pager" name="product_review_list.toolbar" ifconfig="catalog/review/active"/>
             </block>
             <block class="Magento\Review\Block\Form" name="review_form"
                    template="Magento_Review::form.phtml"
