--- a/web/tailwind/tailwind-output.css
+++ b/web/tailwind/tailwind-output.css
@@ -2704,6 +2704,10 @@ body {
   border-bottom-width: 1px;
 }
 
+.last\:border-0:last-child {
+  border-width: 0;
+}
+
 .last\:border-b:last-child {
   border-bottom-width: 1px;
 }
@@ -3151,6 +3155,10 @@ body {
 
 .last\:mr-0:last-child {
   margin-right: 0;
+}
+
+.last\:mb-0:last-child {
+  margin-bottom: 0;
 }
 
 .last\:mb-6:last-child {
