--- a/Magento_Catalog/layout/catalog_product_view.xml
+++ b/Magento_Catalog/layout/catalog_product_view.xml
@@ -102,6 +102,20 @@
                                 <argument name="product_view_model" xsi:type="object">Hyva\Theme\ViewModel\ProductPage</argument>
                             </arguments>
                         </block>
+
+                        <block name="product.info.form" as="product_info_form" template="Magento_Catalog::product/view/product-form.phtml">
+                            <!-- work in progress -->
+                            <!--<block class="Magento\Catalog\Block\Product\View\Options" as="product.options" template="Magento_Catalog::product/view/options/options.phtml">
+                                <block class="Magento\Catalog\Block\Product\View\Options\Type\DefaultType" name="product.info.options.default" as="default" template="Magento_Catalog::product/view/options/type/default.phtml"/>
+                                <block class="Magento\Catalog\Block\Product\View\Options\Type\Text" name="product.info.options.text" as="text" template="Magento_Catalog::product/view/options/type/text.phtml"/>
+                                <block class="Magento\Catalog\Block\Product\View\Options\Type\File" name="product.info.options.file" as="file" template="Magento_Catalog::product/view/options/type/file.phtml"/>
+                                <block class="Magento\Catalog\Block\Product\View\Options\Type\Select" name="product.info.options.select" as="select" template="Magento_Catalog::product/view/options/type/select.phtml"/>
+                                <block class="Magento\Catalog\Block\Product\View\Options\Type\Date" name="product.info.options.date" as="date" template="Magento_Catalog::product/view/options/type/date.phtml"/>
+                            </block>-->
+                            <arguments>
+                                <argument name="product_view_model" xsi:type="object">Hyva\Theme\ViewModel\ProductPage</argument>
+                            </arguments>
+                        </block>
                     </block>
 
                     <block class="Magento\Catalog\Block\Product\View\Gallery" name="product.media"
